Functions definitions completed

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <ul class="shopping-list">
                 <!-- while building the HTML and CSS for this app,we need the 2 LIs bellow,
              but after we finish Html and CSS phase, the JS file will create them dynamicaly,
-so we can comment them out when app is ready for delivery-->
-                <li class="selected">
+so we can comment them out when app is ready for delivery
+                <li>
                     <button class="checkbox">✓</button>
                     <span class="list">Oranges</span>
                     <button class="delete">X</button>
@@ -40,7 +40,7 @@ so we can comment them out when app is ready for delivery-->
                     <button class="checkbox">✓</button>
                     <span class="list">Broad Beans</span>
                     <button class="delete">X</button>
-                </li>
+                </li>-->
             </ul>
             <button id="clearAll">Clear List</button>
         </section>
